Fixed 1px jump upwards on filter room members box

--- a/res/css/structures/_SearchBox.scss
+++ b/res/css/structures/_SearchBox.scss
@@ -26,8 +26,8 @@ limitations under the License.
         cursor: pointer;
         background-image: url('$(res)/img/icons-close.svg');
         background-repeat: no-repeat;
-        width: 16px;
-        height: 16px;
+        width: 15px;
+        height: 15px;
         background-position: center;
         padding: 9px;
     }
